--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,10 @@
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
+    "react-chartjs-2": "^2.11.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^16.14.0",
+    "react-pro-sidebar": "^0.4.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
