--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,21 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@trendmicro/react-sidenav": "^0.5.0",
     "axios": "^0.21.0",
     "formik": "^2.2.0",
+    "material-table": "^1.69.2",
     "mdbreact": "^4.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
+    "react-bootstrap-sidebar": "0.0.1",
+    "react-burger-menu": "^3.0.3",
     "react-chartjs-2": "^2.11.1",
     "react-datepicker": "^3.3.0",
     "react-dom": "^16.14.0",
+    "react-motion-drawer": "^3.1.0",
     "react-pro-sidebar": "^0.4.4",
+    "react-push-menu": "^3.1.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.12.7"
   }
 }
