--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-chartjs-2": "^2.11.1",
     "react-datepicker": "^3.3.0",
     "react-dom": "^16.14.0",
+    "react-icons": "^4.2.0",
     "react-motion-drawer": "^3.1.0",
     "react-pro-sidebar": "^0.4.4",
     "react-push-menu": "^3.1.2",
