--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "react-push-menu": "^3.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "sweetalert2": "^10.15.5",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
