--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@trendmicro/react-sidenav": "^0.5.0",
-    "axios": "^0.21.1",
+    "axios": "^0.21.0",
     "formik": "^2.2.0",
+    "jspdf": "^2.3.1",
+    "jspdf-autotable": "^3.5.14",
     "material-table": "^1.69.2",
     "mdbreact": "^4.27.0",
     "node-sass": "^4.14.1",
+    "papaparse": "^5.3.0",
     "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-sidebar": "0.0.1",
@@ -20,14 +23,20 @@
     "react-chartjs-2": "^2.11.1",
     "react-datepicker": "^3.3.0",
     "react-dom": "^16.14.0",
+    "react-hook-form": "^6.15.1",
     "react-icons": "^4.2.0",
     "react-motion-drawer": "^3.1.0",
     "react-pro-sidebar": "^0.4.4",
     "react-push-menu": "^3.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-select": "^4.3.0",
+    "react-table": "^7.6.3",
+    "react-table-plugins": "^1.3.1",
+    "react-tabs": "^3.2.1",
     "styled-components": "^5.2.1",
-    "sweetalert2": "^10.16.0",
+    "sweetalert2": "^10.15.5",
+    "xlsx": "^0.16.9",
     "yup": "^0.32.9"
   },
   "scripts": {
